[package]
name = "stream_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb = "=2.1.1"
tokio-stream = { version = "0.1", features = ["sync"] }
nanoid = "0.4"